# template-for-cpp

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
.github/: labeler.yml
.github/workflows/: ci.yml  labeler.yml  main.yml  static-analysis.yml
app/: CMakeLists.txt  main.cpp
cmake/: config.cmake  options.cmake  tests.cmake
include/: arith.hpp
include/arith_ops/: arith_ops.hpp
include/math_func/: factorial.hpp  muladd.hpp
lib/arith_ops/: CMakeLists.txt  arith_ops.cpp
lib/math_func/: CMakeLists.txt  factorial.cpp  muladd.cpp
scripts/: run_tests.bat  run_tests.sh
src/: arith.cpp
tests/: CMakeLists.txt
tests/arith_ops/: CMakeLists.txt  main.cpp  test_arith_ops.cpp
tests/math_func/: CMakeLists.txt  muladd.cpp  test_factorial.cpp  test_muladd.cpp
