set(TARGET_NAME arith_ops)
set(TARGET_INCLUDE_DIR ${MATH_INCLUDE_DIR}/${TARGET_NAME})

file(GLOB_RECURSE TARGET_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE TARGET_HEADERS ${TARGET_INCLUDE_DIR}/*.hpp)

add_library(${TARGET_NAME} STATIC ${TARGET_SOURCES} ${TARGET_HEADERS})

target_include_directories(${TARGET_NAME}
    PUBLIC ${MATH_INCLUDE_DIR}
    PUBLIC ${TARGET_INCLUDE_DIR}
)
